Fixed: Series toolbar button collapsing

--- a/frontend/src/Components/Page/Toolbar/PageToolbarSection.css
+++ b/frontend/src/Components/Page/Toolbar/PageToolbarSection.css
@@ -1,6 +1,6 @@
 .sectionContainer {
   display: flex;
-  flex: 1 1 10%;
+  flex: 1 1 auto;
   overflow: hidden;
 }
 
